# corer

./: README.md  pyproject.toml
docs/: todo.md
src/corer/: corer.py
