[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Jason Prasad", email = "jasongprasad@gmail.com" }]
description = "LLDB scripts and tools to debug and reverse engineer Apple platforms"
name = "corer"
version = "0.0.1"
dependencies = []
requires-python = ">=3.9"

[tool.setuptools]
package-dir = { "" = "src" }
